# ssdl-calibration-app

./: .gitignore  LINCENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: calculations.py  calibrations.py  export.py  measurements.py  search.py  upload.py
backend/app/database/: db.py
backend/app/database/migrations/: env.py
backend/app/models/: calibration.py  company.py  file.py  measurement.py  user.py
backend/app/schemas/: calibration.py  company.py  measurement.py  user.py
backend/app/services/: calculations.py  certificate.py  import_data.py  search_index.py
backend/app/tests/: test_api.py  test_calculations.py  test_import.py
backend/app/utils/: auth.py  logging.py
docs/: admin_guide.md  user_manual.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx
frontend/src/components/: CalibrationForm.jsx  Navbar.jsx  ResultsTable.jsx  SearchBar.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  NewCalibration.jsx  QueryResults.jsx  Results.jsx
frontend/src/services/: api.js  calibration.js  search.js
frontend/src/tests/: CalibrationForm.test.jsx  api.test.jsx
scripts/: generate_cert_template.py  import_data.py  setup_db.ps1
